Removed all preview features from application